# isecapipy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  LICENSE  README.md  dev-notes.rst  dev-requirements.txt  pylintrc  pyproject.toml  requirements.txt  run_pylint.sh  run_test.sh  windows-requirements.txt
.github/workflows/: pylint.yml  pytest.yml
planning/: REST_API_ref.rst  feature_bucket.md  library_api_plans.rst
research scripts/: api_url_crawler.py  base_urls.txt
src/isecapipy/: __init__.py  __main__.py  _api_endpoints_script.py  api_mapping.py  config.py  url_generator.py
src/isecapipy/request_body_models/: request_body_models.py
src/isecapipy/response_models/: response_models.py
src/planning/: REST_API_ref.rst
src/research scripts/: api_url_crawler.py  base_urls.txt
tests/: test_agent.py  test_dummy.py  test_uri_generator.py
tests/dummy_data/response/: agent.json  agent_deployment.json  agent_status.json  agents.json
